[tool.poetry]
name = "geolib-community"
version = "0.1.0"
description = "Snippets and examples shared by the community using GEOLib"
authors = ["Deltares"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
geolib = {path = "geolib-0.1.3-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
